sessão how it works alterada

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
     "framer-motion": "^12.11.3",
     "next": "15.3.2",
     "react": "^19.0.0",
