--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
